--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="57x57" href="./media/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./media/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./media/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./media//apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./media/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./media/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./media/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./media/apple-touch-icon-180x180.png">
+    <link rel="icon" href="./media/favicon.ico">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="rgukt,rgukt-basar,basar,Curriculum,cirrulum,cache,curriculum-cache,pdf,materials,rgukthub,rgukt-hub,hub,nirmal"/>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A digital vault designed to safeguard and preserve educational materials from B.Tech 1st year to the final year. It serves as a comprehensive archive, storing course materials, lecture notes, assignments, projects, and other academic resources. Users can access this vault to download relevant materials as needed, ensuring easy retrieval and utilization of educational content."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +35,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>PG WEB APP</title>
+    <title>Curriculum Cache</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
